<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffff0000"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5.0sp"
        android:text="@string/confirmCheat"
        android:textColor="#ffffffff"
        android:textSize="20.0sp" />

    <TextView
        android:id="@+id/answerField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffff00ff"
        android:padding="5.0sp"
        android:text="@string/answer"
        android:textColor="#ff000000"
        android:textSize="20.0sp" />

    <Button
        android:id="@+id/showAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showAnswer"
        android:textSize="20.0sp" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="20.0sp" />
</LinearLayout>