<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hint">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff00"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5.0sp"
            android:text="@string/confirmHint"
            android:textColor="#ff000000"
            android:textSize="20.0sp" />

        <TextView
            android:id="@+id/hintField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffff00ff"
            android:padding="5.0sp"
            android:text="@string/hint"
            android:textColor="#ff000000"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/showHintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showHint"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="20.0sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>